Take it away Emre

--- a/exp/agent_prototype.ipynb
+++ b/exp/agent_prototype.ipynb
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T17:13:24.800186Z",
-     "start_time": "2020-06-25T17:13:24.794185Z"
+     "end_time": "2020-07-01T14:37:06.471004Z",
+     "start_time": "2020-07-01T14:37:05.238942Z"
     }
    },
    "outputs": [],
@@ -75,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T17:13:36.861162Z",
-     "start_time": "2020-06-25T17:13:36.859162Z"
+     "end_time": "2020-07-01T14:37:08.223882Z",
+     "start_time": "2020-07-01T14:37:08.221881Z"
     }
    },
    "outputs": [],
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T17:13:38.766213Z",
-     "start_time": "2020-06-25T17:13:38.763213Z"
+     "end_time": "2020-07-01T14:37:11.151256Z",
+     "start_time": "2020-07-01T14:37:11.147263Z"
     }
    },
    "outputs": [],
@@ -118,6 +118,13 @@
     "\n",
     "CSV_COLS = [\"symbol\", \"date\", \"1. open\", \"2. high\", \"3. low\", \"4. close\", \"5. adjusted close\",\n",
     "           \"6. volume\", \"7. dividend amount\", \"8. split coefficient\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Writing from av API to .csv files"
    ]
   },
   {
@@ -171,12 +178,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merging all .csv files"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T17:23:06.288366Z",
-     "start_time": "2020-06-25T17:23:06.282366Z"
+     "end_time": "2020-07-01T14:37:15.492925Z",
+     "start_time": "2020-07-01T14:37:15.483915Z"
     }
    },
    "outputs": [],
@@ -186,11 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T17:25:35.043219Z",
-     "start_time": "2020-06-25T17:25:34.817874Z"
+     "end_time": "2020-07-01T14:37:16.787456Z",
+     "start_time": "2020-07-01T14:37:16.524887Z"
     }
    },
    "outputs": [],
@@ -205,11 +219,238 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T15:43:26.855914Z",
+     "start_time": "2020-07-01T15:43:26.851922Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "PRICE_COLUMNS = [\n",
+    "    'date',\n",
+    "    'open',\n",
+    "    'high',\n",
+    "    'low',\n",
+    "    'close',\n",
+    "    'adjusted_close',\n",
+    "    'volume',\n",
+    "    'dividend_amount',\n",
+    "    'split_coefficient',\n",
+    "    'symbol'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T15:41:57.716889Z",
+     "start_time": "2020-07-01T15:41:57.712888Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cols_to_rename = {}\n",
+    "for c in df.columns:\n",
+    "    cols_to_rename[c] = \"\".join(list(filter(lambda s: s.isalpha() or s == \" \", c))).strip()\n",
+    "    cols_to_rename[c] = cols_to_rename[c].replace(\" \", \"_\")\n",
+    "    \n",
+    "df.rename(columns=cols_to_rename, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T16:44:49.211913Z",
+     "start_time": "2020-07-01T16:44:49.195909Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date                 datetime64[ns]\n",
+       "open                        float64\n",
+       "high                        float64\n",
+       "low                         float64\n",
+       "close                       float64\n",
+       "adjusted_close              float64\n",
+       "volume                      float64\n",
+       "dividend_amount             float64\n",
+       "split_coefficient           float64\n",
+       "symbol                       string\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "df['symbol'] = df['symbol'].astype(\"string\") # even though this doesn't do anything\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class definitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T16:48:38.024887Z",
+     "start_time": "2020-07-01T16:48:38.016885Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Market:\n",
+    "    def __init__(self, prices: pd.DataFrame, name: str = \"\"):\n",
+    "        assert all([c in PRICE_COLUMNS for c in prices.columns]), \\\n",
+    "            \"Wrong columns!\"\n",
+    "        self.prices = prices\n",
+    "        # sort by date ascending, then by symbol descending\n",
+    "        self.prices.sort_values(by=[\"date\", \"symbol\"], inplace=True, ascending=[True, False])\n",
+    "        self.name = name or \"default_market\"\n",
+    "    \n",
+    "    @property\n",
+    "    def symbols(self):\n",
+    "        return list(self.prices.symbol.unique())\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        self.curr = 1\n",
+    "        return self\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.prices)\n",
+    "    \n",
+    "    def __next__(self) -> pd.DataFrame:\n",
+    "        if self.curr <= len(self.prices):\n",
+    "            self.max_date = self.prices.date.sort_values().unique()[self.curr - 1]\n",
+    "            state = self.prices.loc[self.prices.date <= self.max_date]\n",
+    "            self.curr += 1\n",
+    "            return state\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"Market [{self.name}] (current market_date: {self.max_date})\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculation of dividend yield\n",
+    "__On certain date (choose 01/02):__\n",
+    "1. Get the last paid dividend amount from prev. year := `dividend_payment`\n",
+    "2. Multiply by the number of times dividends were paid last year (mostly: 4) := `dividend_total`\n",
+    "3. divide `dividend_total` by `current_share_price`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T17:28:19.960606Z",
+     "start_time": "2020-07-01T17:28:19.956605Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple\n",
+    "\n",
+    "Transaction = namedtuple(\n",
+    "    \"Transaction\", \n",
+    "    field_names=[\"symbol\", \"amount\", \"date\", \"stock_price\", \"total_value\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T15:53:02.134540Z",
+     "start_time": "2020-07-01T15:53:02.131539Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Agent:\n",
+    "    def __init__(self, name: str, starting_capital: float, market: Market):\n",
+    "        self.name = name\n",
+    "        self.cash = starting_capital\n",
+    "        self.market = market\n",
+    "        self.trading_history = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T17:30:19.598278Z",
+     "start_time": "2020-07-01T17:30:19.595277Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "t = Transaction(symbol=\"AAPL\", amount=10, date=\"2020-01-01\", stock_price=3000.00, total_value=30_000.00)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T17:30:23.054440Z",
+     "start_time": "2020-07-01T17:30:23.050439Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.amount"
+   ]
   }
  ],
  "metadata": {
