--- a/exp/agent_prototype.ipynb
+++ b/exp/agent_prototype.ipynb
@@ -7,8 +7,8 @@
    },
    "source": [
     "# Steps\n",
-    "1. Get dataset of 20 stock from database (.csv)\n",
-    "2. "
+    "✅ Get dataset of 20 stock from database (.csv) <br>\n",
+    "⬜ "
    ]
   },
   {
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T17:14:38.945058Z",
-     "start_time": "2020-06-25T17:14:38.942056Z"
+     "end_time": "2020-07-03T10:20:27.685841Z",
+     "start_time": "2020-07-03T10:20:27.681832Z"
     }
    },
    "outputs": [],
@@ -50,15 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T14:37:06.471004Z",
-     "start_time": "2020-07-01T14:37:05.238942Z"
+     "end_time": "2020-07-03T11:21:28.339960Z",
+     "start_time": "2020-07-03T11:21:28.336960Z"
     }
    },
    "outputs": [],
    "source": [
+    "from typing import Dict\n",
+    "\n",
+    "import operator\n",
     "import requests\n",
     "import os\n",
     "import pandas as pd\n",
@@ -75,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T14:37:08.223882Z",
-     "start_time": "2020-07-01T14:37:08.221881Z"
+     "end_time": "2020-07-03T10:20:37.651966Z",
+     "start_time": "2020-07-03T10:20:37.649966Z"
     }
    },
    "outputs": [],
@@ -103,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T14:37:11.151256Z",
-     "start_time": "2020-07-01T14:37:11.147263Z"
+     "end_time": "2020-07-03T10:21:11.718998Z",
+     "start_time": "2020-07-03T10:21:11.714998Z"
     }
    },
    "outputs": [],
@@ -129,11 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T17:19:52.256189Z",
-     "start_time": "2020-06-25T17:14:40.870217Z"
+     "end_time": "2020-07-03T10:21:41.713955Z",
+     "start_time": "2020-07-03T10:21:13.499483Z"
     },
     "tags": []
    },
@@ -142,26 +145,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appended stock MCD. Waiting...\n",
-      "Appended stock ESS. Waiting...\n",
-      "Appended stock ABC. Waiting...\n",
-      "Appended stock PFE. Waiting...\n",
-      "Appended stock MA. Waiting...\n",
-      "Appended stock GWW. Waiting...\n",
-      "Appended stock AOS. Waiting...\n",
-      "Appended stock GD. Waiting...\n",
-      "Appended stock YUM. Waiting...\n",
-      "Appended stock LOW. Waiting...\n",
-      "Appended stock ALB. Waiting...\n",
-      "Appended stock IFF. Waiting...\n",
-      "Appended stock TPR. Waiting...\n",
-      "Appended stock CB. Waiting...\n",
-      "Appended stock ANTM. Waiting...\n",
-      "Appended stock WAT. Waiting...\n",
-      "Appended stock CPB. Waiting...\n",
-      "Appended stock IPGP. Waiting...\n",
-      "Appended stock SBUX. Waiting...\n",
-      "Appended stock HSY. Waiting...\n"
+      "Appended stock 0: <MCD>. Waiting...\n",
+      "Appended stock 1: <ESS>. Waiting...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-eef2c1d16c1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mmaster_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Appended stock {idx}: <{symbol}>. Waiting...\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mSTANDARD_DELAY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -186,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T14:37:15.492925Z",
-     "start_time": "2020-07-01T14:37:15.483915Z"
+     "end_time": "2020-07-03T10:21:45.236365Z",
+     "start_time": "2020-07-03T10:21:45.229355Z"
     }
    },
    "outputs": [],
@@ -200,11 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T14:37:16.787456Z",
-     "start_time": "2020-07-01T14:37:16.524887Z"
+     "end_time": "2020-07-03T10:21:46.001008Z",
+     "start_time": "2020-07-03T10:21:45.764955Z"
     }
    },
    "outputs": [],
@@ -227,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T15:43:26.855914Z",
-     "start_time": "2020-07-01T15:43:26.851922Z"
+     "end_time": "2020-07-03T10:21:48.727999Z",
+     "start_time": "2020-07-03T10:21:48.724998Z"
     }
    },
    "outputs": [],
@@ -252,11 +248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T15:41:57.716889Z",
-     "start_time": "2020-07-01T15:41:57.712888Z"
+     "end_time": "2020-07-03T10:21:49.619957Z",
+     "start_time": "2020-07-03T10:21:49.605946Z"
     }
    },
    "outputs": [],
@@ -271,11 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T16:44:49.211913Z",
-     "start_time": "2020-07-01T16:44:49.195909Z"
+     "end_time": "2020-07-03T10:21:52.173009Z",
+     "start_time": "2020-07-03T10:21:52.092991Z"
     }
    },
    "outputs": [
@@ -295,7 +291,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 94,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T16:48:38.024887Z",
-     "start_time": "2020-07-01T16:48:38.016885Z"
+     "end_time": "2020-07-03T11:46:46.545032Z",
+     "start_time": "2020-07-03T11:46:46.535031Z"
     }
    },
    "outputs": [],
@@ -352,12 +348,14 @@
     "        return len(self.prices)\n",
     "    \n",
     "    def __next__(self) -> pd.DataFrame:\n",
-    "        if self.curr <= len(self.prices):\n",
+    "        if self.curr < len(self.prices.date.unique()):\n",
+    "            \n",
     "            self.max_date = self.prices.date.sort_values().unique()[self.curr - 1]\n",
     "            state = self.prices.loc[self.prices.date <= self.max_date]\n",
     "            self.curr += 1\n",
     "            return state\n",
     "        else:\n",
+    "            #  we are on the last date of the prices > exit the iteration\n",
     "            raise StopIteration\n",
     "    \n",
     "    def __str__(self):\n",
@@ -377,11 +375,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T17:28:19.960606Z",
-     "start_time": "2020-07-01T17:28:19.956605Z"
+     "end_time": "2020-07-03T10:21:58.239951Z",
+     "start_time": "2020-07-03T10:21:58.236950Z"
     }
    },
    "outputs": [],
@@ -395,22 +393,224 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strategy Interface (subclass from this)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-01T15:53:02.134540Z",
-     "start_time": "2020-07-01T15:53:02.131539Z"
+     "end_time": "2020-07-03T10:22:01.929418Z",
+     "start_time": "2020-07-03T10:22:01.925418Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Strategy:\n",
+    "    def __init__(self, name: str):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def weight(self, market_state: pd.DataFrame) -> Dict[str, float]:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Code behavior:__\n",
+    "1. ✅ Check if it's the first trading date of that year\n",
+    "2. ✅ Check if we have a previous year\n",
+    "3. ✅ Get the last-paid dividend of prev. year := `last_paid_div`\n",
+    "4. ✅ Get count of dividends payed of last year per stock := `num_div_paid`\n",
+    "5. ✅ last_paid_div * num_div_paid := `projected_div_amount`\n",
+    "6. ✅Apply weights (how? => all in on highest value stock)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dogs of the Stocks - Strategy implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-03T11:35:34.756941Z",
+     "start_time": "2020-07-03T11:35:34.742938Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class DogsOfTheStocks(Strategy):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "    \n",
+    "    def weight(self, market_state: pd.DataFrame) -> Dict[str, float]:\n",
+    "        # make default weight map\n",
+    "        weights = {}\n",
+    "        stocks = set(market_state.symbol.unique())\n",
+    "        for stock in stocks:\n",
+    "            weights[stock] = 0.\n",
+    "        \n",
+    "        current_date = market_state.date.max()\n",
+    "        if current_date.year == market_state.date.min().year:\n",
+    "            # there is no previous year\n",
+    "            return weights\n",
+    "        if current_date == market_state.loc[market_state.date.dt.year == current_date.year].date.min():\n",
+    "            # it's the first trading day of the current year\n",
+    "            prev_year = current_date.year - 1\n",
+    "            last_paid_divs = {}\n",
+    "            # all dividends paid last year\n",
+    "            divs = market_state.loc[(market_state.dividend_amount != 0.) & (market_state.date.dt.year == prev_year)].sort_values(by=\"date\")\n",
+    "            for stock in stocks:\n",
+    "                # for every stock:\n",
+    "                # > get last paid dividend of prev. year\n",
+    "                # > get amount of times dividends were paid last year\n",
+    "                last_paid_divs[stock] = {}\n",
+    "                try:\n",
+    "                    last_paid_divs[stock][\"amount\"] = divs.loc[divs.symbol == stock].dividend_amount.values[-1]\n",
+    "                except IndexError:\n",
+    "                    last_paid_divs[stock][\"amount\"] = 0\n",
+    "                last_paid_divs[stock][\"times_paid\"] = len(divs.loc[divs.symbol == stock])\n",
+    "                \n",
+    "                div_values = {}\n",
+    "#                 display(divs)\n",
+    "                for stock, dividend_data in last_paid_divs.items():\n",
+    "                    # for every stock: multiply last paid dividend by number of times div\n",
+    "                    # were paid last year,\n",
+    "                    # and divide by the current stock price\n",
+    "                    current_price = market_state.loc[(market_state.date == current_date) & (market_state.symbol == stock)].close.values[0]\n",
+    "                    div_values[stock] = dividend_data[\"amount\"] * dividend_data[\"times_paid\"] / current_price\n",
+    "                \n",
+    "                # pick stock with highest relative dividend value,\n",
+    "                # and  assign weight of 1\n",
+    "                # TODO(jonas): weight relative to %share of total\n",
+    "            highest_value_stock = max(div_values.items(), key=operator.itemgetter(1))[0]\n",
+    "            weights[highest_value_stock] = 1\n",
+    "        \n",
+    "        return weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-03T11:54:43.022954Z",
+     "start_time": "2020-07-03T11:54:43.012953Z"
     }
    },
    "outputs": [],
    "source": [
     "class Agent:\n",
-    "    def __init__(self, name: str, starting_capital: float, market: Market):\n",
-    "        self.name = name\n",
+    "    def __init__(self, starting_capital: float, market: Market, strategy: Strategy, name: str):\n",
+    "        # TODO(jonas): implement agent getting new cash every [x interval]\n",
     "        self.cash = starting_capital\n",
     "        self.market = market\n",
-    "        self.trading_history = []"
+    "        self.strategy = strategy\n",
+    "        self.name = name\n",
+    "        self.portfolio = {}\n",
+    "        self.trading_history = []\n",
+    "    \n",
+    "    def run_simulation(self):\n",
+    "        # TODO(jonas): agent gets divivends\n",
+    "        for state in market:\n",
+    "            self.state = state\n",
+    "            weights = self.strategy.weight(market_state=self.state)\n",
+    "            for stock, weight in weights.items():\n",
+    "                if weight != 0:\n",
+    "                    print(f\"Purchase recommendation for: {stock}\\n\")\n",
+    "                    print(weights)\n",
+    "                    print(\"\\n===============================================\\n\")\n",
+    "                    break\n",
+    "                    \n",
+    "    def buy(self, stock_symbol: str, stock_price: float, amount: int, date):\n",
+    "        total_price = amount * stock_price\n",
+    "        assert self.cash - total_price >= 0, \"Can't spend more than you have!\"\n",
+    "        self.cash -= total_price\n",
+    "        self.portfolio[stock_symbol] = self.portfolio.get(stock_symbol, 0) + amount\n",
+    "        transaction = Transaction(\n",
+    "            symbol=stock_symbol,\n",
+    "            amount=amount,\n",
+    "            date=date,\n",
+    "            stock_price=stock_price,\n",
+    "            total_value=total_price,\n",
+    "        )\n",
+    "        self.trading_history.append(transaction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-03T12:21:34.511465Z",
+     "start_time": "2020-07-03T12:21:28.233454Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jonas\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  import sys\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Purchase recommendation for: PFE\n",
+      "\n",
+      "{'ABC': 0.0, 'MA': 0.0, 'ALB': 0.0, 'AOS': 0.0, 'ANTM': 0.0, 'MCD': 0.0, 'LOW': 0.0, 'GWW': 0.0, 'CPB': 0.0, 'WAT': 0.0, 'ESS': 0.0, 'TPR': 0.0, 'HSY': 0.0, 'GD': 0.0, 'IPGP': 0.0, 'IFF': 0.0, 'PFE': 1, 'YUM': 0.0, 'SBUX': 0.0, 'CB': 0.0}\n",
+      "\n",
+      "===============================================\n",
+      "\n",
+      "Purchase recommendation for: CPB\n",
+      "\n",
+      "{'ABC': 0.0, 'MA': 0.0, 'ALB': 0.0, 'AOS': 0.0, 'ANTM': 0.0, 'MCD': 0.0, 'LOW': 0.0, 'GWW': 0.0, 'CPB': 1, 'WAT': 0.0, 'ESS': 0.0, 'TPR': 0.0, 'HSY': 0.0, 'GD': 0.0, 'IPGP': 0.0, 'IFF': 0.0, 'PFE': 0.0, 'YUM': 0.0, 'SBUX': 0.0, 'CB': 0.0}\n",
+      "\n",
+      "===============================================\n",
+      "\n",
+      "Purchase recommendation for: TPR\n",
+      "\n",
+      "{'ABC': 0.0, 'MA': 0.0, 'ALB': 0.0, 'AOS': 0.0, 'ANTM': 0.0, 'MCD': 0.0, 'LOW': 0.0, 'GWW': 0.0, 'CPB': 0.0, 'WAT': 0.0, 'ESS': 0.0, 'TPR': 1, 'HSY': 0.0, 'GD': 0.0, 'IPGP': 0.0, 'IFF': 0.0, 'PFE': 0.0, 'YUM': 0.0, 'SBUX': 0.0, 'CB': 0.0}\n",
+      "\n",
+      "===============================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "market = Market(prices=df.loc[df.date.dt.year.isin([2017, 2018, 2019, 2020])], name=\"test\")\n",
+    "strategy = DogsOfTheStocks(name=\"DogsOfTheStocks\")\n",
+    "agent = Agent(\n",
+    "    starting_capital=10_000,\n",
+    "    market=market,\n",
+    "    strategy=strategy,\n",
+    "    name=\"test\"\n",
+    ")\n",
+    "\n",
+    "agent.run_simulation()"
    ]
   },
   {
