--- a/exp/agent_prototype.ipynb
+++ b/exp/agent_prototype.ipynb
@@ -32,8 +32,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T12:42:34.902093Z",
-     "start_time": "2020-07-27T12:42:34.898101Z"
+     "end_time": "2020-07-28T11:59:04.440732Z",
+     "start_time": "2020-07-28T11:59:04.436729Z"
     }
    },
    "outputs": [],
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T16:30:39.248125Z",
-     "start_time": "2020-07-27T16:30:39.243124Z"
+     "end_time": "2020-07-28T11:59:06.812374Z",
+     "start_time": "2020-07-28T11:59:05.801281Z"
     }
    },
    "outputs": [],
@@ -99,8 +99,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T12:42:47.820068Z",
-     "start_time": "2020-07-27T12:42:47.815066Z"
+     "end_time": "2020-07-28T11:59:10.950747Z",
+     "start_time": "2020-07-28T11:59:10.945736Z"
     }
    },
    "outputs": [],
@@ -177,8 +177,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T12:42:51.473976Z",
-     "start_time": "2020-07-27T12:42:51.464982Z"
+     "end_time": "2020-07-28T11:59:16.097829Z",
+     "start_time": "2020-07-28T11:59:16.090819Z"
     }
    },
    "outputs": [],
@@ -192,8 +192,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T12:42:52.258100Z",
-     "start_time": "2020-07-27T12:42:52.001041Z"
+     "end_time": "2020-07-28T11:59:17.738630Z",
+     "start_time": "2020-07-28T11:59:17.498555Z"
     }
    },
    "outputs": [],
@@ -219,8 +219,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T12:42:53.173415Z",
-     "start_time": "2020-07-27T12:42:53.169414Z"
+     "end_time": "2020-07-28T11:59:20.909082Z",
+     "start_time": "2020-07-28T11:59:20.906081Z"
     }
    },
    "outputs": [],
@@ -244,8 +244,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T12:42:53.778081Z",
-     "start_time": "2020-07-27T12:42:53.761079Z"
+     "end_time": "2020-07-28T11:59:22.105755Z",
+     "start_time": "2020-07-28T11:59:22.090751Z"
     }
    },
    "outputs": [],
@@ -263,8 +263,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T12:42:54.274092Z",
-     "start_time": "2020-07-27T12:42:54.193073Z"
+     "end_time": "2020-07-28T11:59:22.756403Z",
+     "start_time": "2020-07-28T11:59:22.674392Z"
     }
    },
    "outputs": [
@@ -311,11 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T15:02:29.082418Z",
-     "start_time": "2020-07-27T15:02:29.068415Z"
+     "end_time": "2020-07-28T11:59:25.208651Z",
+     "start_time": "2020-07-28T11:59:25.194648Z"
     }
    },
    "outputs": [],
@@ -395,11 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T16:02:48.950658Z",
-     "start_time": "2020-07-27T16:02:48.946657Z"
+     "end_time": "2020-07-28T11:59:27.942272Z",
+     "start_time": "2020-07-28T11:59:27.938279Z"
     }
    },
    "outputs": [],
@@ -434,11 +434,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T16:27:46.331913Z",
-     "start_time": "2020-07-27T16:27:46.309907Z"
+     "end_time": "2020-07-28T11:59:30.372786Z",
+     "start_time": "2020-07-28T11:59:30.355791Z"
     }
    },
    "outputs": [],
@@ -526,8 +526,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T12:43:01.388232Z",
-     "start_time": "2020-07-27T12:43:01.385231Z"
+     "end_time": "2020-07-28T11:59:31.806571Z",
+     "start_time": "2020-07-28T11:59:31.802579Z"
     }
    },
    "outputs": [],
@@ -547,11 +547,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T16:37:55.715267Z",
-     "start_time": "2020-07-27T16:37:55.690261Z"
+     "end_time": "2020-07-28T11:59:32.841841Z",
+     "start_time": "2020-07-28T11:59:32.819844Z"
     }
    },
    "outputs": [],
@@ -645,7 +645,6 @@
     "        print(\"Performance verdict:\\n\")\n",
     "        print(self.evaluate())\n",
     "        \n",
-    "    \n",
     "    def get_own_total_value(self):\n",
     "        total_value = self.cash\n",
     "        for stock, amount in self.portfolio.items():\n",
@@ -673,11 +672,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T16:36:49.617641Z",
-     "start_time": "2020-07-27T16:36:27.505968Z"
+     "end_time": "2020-07-28T12:29:03.981551Z",
+     "start_time": "2020-07-28T12:28:50.435077Z"
     }
    },
    "outputs": [
@@ -696,100 +695,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Making purchase transaction: Transaction(symbol='TPR', amount=63.0, date=numpy.datetime64('2017-01-03T00:00:00.000000000'), stock_price=31.5919, total_value=1990.2897)\n",
-      "Making purchase transaction: Transaction(symbol='MCD', amount=18.0, date=numpy.datetime64('2017-01-03T00:00:00.000000000'), stock_price=109.6259, total_value=1973.2662)\n",
-      "Making purchase transaction: Transaction(symbol='PFE', amount=69.0, date=numpy.datetime64('2017-01-03T00:00:00.000000000'), stock_price=28.9687, total_value=1998.8402999999998)\n",
-      "Making purchase transaction: Transaction(symbol='ESS', amount=9.0, date=numpy.datetime64('2017-01-03T00:00:00.000000000'), stock_price=208.6438, total_value=1877.7942)\n",
-      "Making purchase transaction: Transaction(symbol='YUM', amount=33.0, date=numpy.datetime64('2017-01-03T00:00:00.000000000'), stock_price=59.4908, total_value=1963.1964)\n",
-      "Paid agents dividends of 9.9!\n",
-      "Paid agents dividends of 22.080000000000002!\n",
-      "Paid agents dividends of 16.919999999999998!\n",
-      "Paid agents dividends of 21.293999999999997!\n",
-      "Paid agents dividends of 15.75!\n",
-      "Paid agents dividends of 9.9!\n",
-      "Paid agents dividends of 22.080000000000002!\n",
-      "Paid agents dividends of 16.919999999999998!\n",
-      "Paid agents dividends of 21.293999999999997!\n",
-      "Paid agents dividends of 15.75!\n",
-      "Paid agents dividends of 9.9!\n",
-      "Paid agents dividends of 22.080000000000002!\n",
-      "Paid agents dividends of 16.919999999999998!\n",
-      "Paid agents dividends of 21.293999999999997!\n",
-      "Paid agents dividends of 15.75!\n",
-      "Paid agents dividends of 22.080000000000002!\n",
-      "Paid agents dividends of 9.9!\n",
-      "Paid agents dividends of 18.18!\n",
-      "Paid agents dividends of 21.293999999999997!\n",
-      "Paid agents dividends of 15.75!\n",
-      "Making sell transaction: Transaction(symbol='MCD', amount=-18, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=162.808, total_value=-2930.544)\n",
-      "Making sell transaction: Transaction(symbol='YUM', amount=-33, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=78.1246, total_value=-2578.1118)\n",
-      "Making purchase transaction: Transaction(symbol='TPR', amount=29.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=41.5863, total_value=1206.0027)\n",
-      "Making purchase transaction: Transaction(symbol='HSY', amount=11.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=105.4908, total_value=1160.3988)\n",
-      "Making purchase transaction: Transaction(symbol='PFE', amount=36.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=33.2413, total_value=1196.6868000000002)\n",
-      "Making purchase transaction: Transaction(symbol='CPB', amount=27.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=43.5982, total_value=1177.1514)\n",
-      "Making purchase transaction: Transaction(symbol='ESS', amount=5.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=224.7827, total_value=1123.9135)\n",
-      "Paid agents dividends of 9.45!\n",
-      "Paid agents dividends of 35.7!\n",
-      "Paid agents dividends of 7.215999999999999!\n",
-      "Paid agents dividends of 31.095999999999997!\n",
-      "Paid agents dividends of 26.040000000000003!\n",
-      "Paid agents dividends of 9.45!\n",
-      "Paid agents dividends of 35.7!\n",
-      "Paid agents dividends of 7.215999999999999!\n",
-      "Paid agents dividends of 31.095999999999997!\n",
-      "Paid agents dividends of 26.040000000000003!\n",
-      "Paid agents dividends of 9.45!\n",
-      "Paid agents dividends of 35.7!\n",
-      "Paid agents dividends of 7.942!\n",
-      "Paid agents dividends of 31.095999999999997!\n",
-      "Paid agents dividends of 26.040000000000003!\n",
-      "Paid agents dividends of 9.45!\n",
-      "Paid agents dividends of 35.7!\n",
-      "Paid agents dividends of 7.942!\n",
-      "Paid agents dividends of 26.040000000000003!\n",
-      "Making purchase transaction: Transaction(symbol='TPR', amount=3.0, date=numpy.datetime64('2019-01-02T00:00:00.000000000'), stock_price=32.2742, total_value=96.8226)\n",
+      "Making purchase transaction: Transaction(symbol='CPB', amount=45.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=43.5982, total_value=1961.9189999999999)\n",
+      "Making purchase transaction: Transaction(symbol='TPR', amount=48.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=41.5863, total_value=1996.1424000000002)\n",
+      "Making purchase transaction: Transaction(symbol='ESS', amount=8.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=224.7827, total_value=1798.2616)\n",
+      "Making purchase transaction: Transaction(symbol='PFE', amount=60.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=33.2413, total_value=1994.478)\n",
+      "Making purchase transaction: Transaction(symbol='HSY', amount=18.0, date=numpy.datetime64('2018-01-02T00:00:00.000000000'), stock_price=105.4908, total_value=1898.8344)\n",
+      "Paid agents dividends of 15.749999999999998!\n",
+      "Paid agents dividends of 20.400000000000002!\n",
+      "Paid agents dividends of 11.807999999999998!\n",
+      "Paid agents dividends of 16.223999999999997!\n",
+      "Paid agents dividends of 14.88!\n",
+      "Paid agents dividends of 15.749999999999998!\n",
+      "Paid agents dividends of 20.400000000000002!\n",
+      "Paid agents dividends of 11.807999999999998!\n",
+      "Paid agents dividends of 16.223999999999997!\n",
+      "Paid agents dividends of 14.88!\n",
+      "Paid agents dividends of 15.749999999999998!\n",
+      "Paid agents dividends of 20.400000000000002!\n",
+      "Paid agents dividends of 12.995999999999999!\n",
+      "Paid agents dividends of 16.223999999999997!\n",
+      "Paid agents dividends of 14.88!\n",
+      "Paid agents dividends of 15.749999999999998!\n",
+      "Paid agents dividends of 20.400000000000002!\n",
+      "Paid agents dividends of 12.995999999999999!\n",
+      "Paid agents dividends of 14.88!\n",
+      "Making purchase transaction: Transaction(symbol='CPB', amount=4.0, date=numpy.datetime64('2019-01-02T00:00:00.000000000'), stock_price=30.6856, total_value=122.7424)\n",
+      "Making purchase transaction: Transaction(symbol='TPR', amount=4.0, date=numpy.datetime64('2019-01-02T00:00:00.000000000'), stock_price=32.2742, total_value=129.0968)\n",
+      "Making purchase transaction: Transaction(symbol='ESS', amount=0.0, date=numpy.datetime64('2019-01-02T00:00:00.000000000'), stock_price=228.4468, total_value=0.0)\n",
+      "Making purchase transaction: Transaction(symbol='PFE', amount=3.0, date=numpy.datetime64('2019-01-02T00:00:00.000000000'), stock_price=40.8633, total_value=122.5899)\n",
       "Making purchase transaction: Transaction(symbol='HSY', amount=1.0, date=numpy.datetime64('2019-01-02T00:00:00.000000000'), stock_price=102.0207, total_value=102.0207)\n",
-      "Making purchase transaction: Transaction(symbol='PFE', amount=2.0, date=numpy.datetime64('2019-01-02T00:00:00.000000000'), stock_price=40.8633, total_value=81.7266)\n",
-      "Making purchase transaction: Transaction(symbol='CPB', amount=3.0, date=numpy.datetime64('2019-01-02T00:00:00.000000000'), stock_price=30.6856, total_value=92.05680000000001)\n",
-      "Paid agents dividends of 10.5!\n",
-      "Paid agents dividends of 38.519999999999996!\n",
-      "Paid agents dividends of 8.664!\n",
-      "Paid agents dividends of 32.11!\n",
-      "Paid agents dividends of 27.3!\n",
-      "Paid agents dividends of 10.5!\n",
-      "Paid agents dividends of 38.519999999999996!\n",
-      "Paid agents dividends of 8.664!\n",
-      "Paid agents dividends of 32.11!\n",
-      "Paid agents dividends of 27.3!\n",
-      "Paid agents dividends of 10.5!\n",
-      "Paid agents dividends of 38.519999999999996!\n",
-      "Paid agents dividends of 9.276!\n",
-      "Paid agents dividends of 32.11!\n",
-      "Paid agents dividends of 27.3!\n",
-      "Paid agents dividends of 10.5!\n",
-      "Paid agents dividends of 38.519999999999996!\n",
-      "Paid agents dividends of 9.276!\n",
-      "Paid agents dividends of 32.0625!\n",
-      "Paid agents dividends of 27.3!\n",
-      "Making sell transaction: Transaction(symbol='HSY', amount=-12, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=142.4085, total_value=-1708.902)\n",
-      "Making purchase transaction: Transaction(symbol='TPR', amount=18.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=26.5271, total_value=477.4878)\n",
-      "Making purchase transaction: Transaction(symbol='MCD', amount=2.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=198.1761, total_value=396.3522)\n",
-      "Making purchase transaction: Transaction(symbol='PFE', amount=12.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=38.3486, total_value=460.18319999999994)\n",
-      "Making purchase transaction: Transaction(symbol='CPB', amount=10.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=47.7781, total_value=477.781)\n",
-      "Making purchase transaction: Transaction(symbol='ESS', amount=1.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=295.5572, total_value=295.5572)\n",
-      "Paid agents dividends of 14.0!\n",
-      "Paid agents dividends of 45.22!\n",
-      "Paid agents dividends of 2.5!\n",
-      "Paid agents dividends of 38.1375!\n",
-      "Paid agents dividends of 31.1625!\n",
-      "Paid agents dividends of 14.0!\n",
-      "Paid agents dividends of 45.22!\n",
-      "Paid agents dividends of 2.5!\n"
+      "Paid agents dividends of 17.15!\n",
+      "Paid agents dividends of 22.68!\n",
+      "Paid agents dividends of 13.718!\n",
+      "Paid agents dividends of 17.575999999999997!\n",
+      "Paid agents dividends of 15.6!\n",
+      "Paid agents dividends of 17.15!\n",
+      "Paid agents dividends of 22.68!\n",
+      "Paid agents dividends of 13.718!\n",
+      "Paid agents dividends of 17.575999999999997!\n",
+      "Paid agents dividends of 15.6!\n",
+      "Paid agents dividends of 17.15!\n",
+      "Paid agents dividends of 22.68!\n",
+      "Paid agents dividends of 14.687000000000001!\n",
+      "Paid agents dividends of 17.575999999999997!\n",
+      "Paid agents dividends of 15.6!\n",
+      "Paid agents dividends of 17.15!\n",
+      "Paid agents dividends of 22.68!\n",
+      "Paid agents dividends of 14.687000000000001!\n",
+      "Paid agents dividends of 17.55!\n",
+      "Paid agents dividends of 15.6!\n",
+      "Making sell transaction: Transaction(symbol='HSY', amount=-19, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=142.4085, total_value=-2705.7615)\n",
+      "Making purchase transaction: Transaction(symbol='CPB', amount=13.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=47.7781, total_value=621.1153)\n",
+      "Making purchase transaction: Transaction(symbol='TPR', amount=24.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=26.5271, total_value=636.6504)\n",
+      "Making purchase transaction: Transaction(symbol='MCD', amount=3.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=198.1761, total_value=594.5283)\n",
+      "Making purchase transaction: Transaction(symbol='ESS', amount=2.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=295.5572, total_value=591.1144)\n",
+      "Making purchase transaction: Transaction(symbol='PFE', amount=16.0, date=numpy.datetime64('2020-01-02T00:00:00.000000000'), stock_price=38.3486, total_value=613.5776)\n",
+      "Paid agents dividends of 21.7!\n",
+      "Paid agents dividends of 30.02!\n",
+      "Paid agents dividends of 3.75!\n",
+      "Paid agents dividends of 25.650000000000002!\n",
+      "Paid agents dividends of 20.775000000000002!\n",
+      "Paid agents dividends of 21.7!\n",
+      "Paid agents dividends of 30.02!\n",
+      "Paid agents dividends of 3.75!\n"
      ]
     }
    ],
    "source": [
-    "market = Market(prices=df.loc[df.date.dt.year.isin([2016, 2017, 2018, 2019, 2020])], name=\"test\")\n",
+    "market = Market(prices=df.loc[df.date.dt.year.isin([2017, 2018, 2019, 2020])], name=\"test\")\n",
     "strategy = DogsOfTheStocks(name=\"DogsOfTheStocks\", top_n_stocks=5)\n",
     "agent = Agent(\n",
     "    starting_capital=10_000,\n",
